feat: enhance RelationLookupResolver to support to-many relationships and improve lookup handling